--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
     <!-- Add the slick-theme.css if you want default styling -->
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick-theme.css"/>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
   </head>
   <body class="main-content">
     <nav class="navbar navbar-inverse navbar-fixed-top navbar-custom">
@@ -22,23 +23,29 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand navbar-brand-custom" href="#">
-            <%= image_tag 'usher_logo.png', width: '150em'%>
-          </a>
+          <%= link_to root_path do %>
+            <p class="lead navbar-text navbar-ryan">RYAN USHER</p>
+          <% end %>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navigation-links">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active menu-link"><%= link_to "HOME", root_path, class: 'lead' %></li>
-            <li class="menu-link"><%= link_to "ABOUT", about_path, class: 'lead' %></li>
-            <li class="menu-link"><%= link_to "GALLERY", about_path, class: 'lead' %></li>
-            <li class="menu-link"><%= link_to "CONTACT", about_path, class: 'lead' %></li>
+            <li class="active menu-link"><%= link_to "HOME", root_path %></li>
+            <li class="menu-link"><%= link_to "ABOUT", about_path %></li>
+            <li class="menu-link"><%= link_to "GALLERY", about_path %></li>
+            <li class="menu-link"><%= link_to "CONTACT", contacts_path %></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
     <div class="container-fluid home-page">
+      <nav class="social">
+        <ul>
+          <li><a href="http://www.instagram.com/ryanussher/" target="_blank">Instagram <i class="fa fa-instagram"></i></a></li>
+          <li><a href="http://facebook.com/" target="_blank">Facebook <i class="fa fa-facebook"></i></a></li>
+        </ul>
+      </nav>
       <%= yield %>
     </div>
     <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
