--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -10,7 +10,8 @@
     <div class="text-center">
       <%= image_tag 'usher_face.png', width: 200 %>
     </div>
-    <p class="lead text-center">
+    <br><br>
+    <p class="lead">
       Ryan’s tattooing career started with a firm base in a busy street shop environment that gave him skills across a broad range of styles.
       Since then, he has taken his work to various cities across the UK, Europe and North America, taking bits and pieces of inspiration and honing his skills as he went.
       Ryan has since found a his home back in Sydney, tattooing at Lighthouse. Here he has focussed his style into producing bold, distinctive custom Japanese and neb-traditional pieces, always aiming to add some grit.
