--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-8 col-md-offset-2 header">
-    <h1 class="lead text-center">RYAN USHER</h1>
+    <h1 class="lead text-center">RYAN USSHER</h1>
   </div>
 </div>
 
@@ -23,7 +23,7 @@
     <div class="small-bio">
       <h1 class="lead text-center">JAPANESE CUSTOM TATTOO</h1>
       <hr>
-      <h4 class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
+      <h4 class="lead text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
     </div>
   </div>
 </div>
@@ -40,20 +40,20 @@
   </div>
   <div class="col-md-4">
     <div class="big-mask">
-      <%= image_tag 'mask2.png' %>
-    </div>
-    <br>
-    <div class="mask-button text-center">
-      <%= link_to "Gallery", root_path, class: "btn btn-default" %>
-    </div>
-  </div>
-  <div class="col-md-4">
-    <div class="big-mask">
       <%= image_tag 'mask3.png' %>
     </div>
     <br>
     <div class="mask-button text-center">
-      <%= link_to "Contact", root_path, class: "btn btn-default" %>
+      <%= link_to "Gallery", gallery_path, class: "btn btn-default" %>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="big-mask">
+      <%= image_tag 'mask2.png' %>
+    </div>
+    <br>
+    <div class="mask-button text-center">
+      <%= link_to "Contact", contacts_path, class: "btn btn-default" %>
     </div>
   </div>
 </div>
