--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -2,6 +2,7 @@
 
 body {
   font-family: 'Raleway', sans-serif;
+  padding-top: 70px;
 }
 
 .main-content {
@@ -270,4 +271,9 @@ a {
 
 #images_form {
   color: white;
+}
+
+.navbar-brand-ryan {
+  height: 78px;
+  width: 80px;
 }
