--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -12,9 +12,9 @@
     </div>
     <br><br>
     <p class="lead">
-      Ryan’s tattooing career started with a firm base in a busy street shop environment that gave him skills across a broad range of styles.
-      Since then, he has taken his work to various cities across the UK, Europe and North America, taking bits and pieces of inspiration and honing his skills as he went.
-      Ryan has since found a his home back in Sydney, tattooing at Lighthouse. Here he has focussed his style into producing bold, distinctive custom Japanese and neb-traditional pieces, always aiming to add some grit.
+      Ryan's work is characterized by bold contrast and dynamic composition. The colours and tones are selected for their impact as well as for longevity in the skin over time. The movement conveyed by his dynamic drawing style encourages the viewer to want to view the whole piece from a distance as well as the details up close.
+      Having started his career in tattooing in 2005, Ryan has worked in many places in Australia and abroad, from bustling street shops to small private studios, to hone his skills into a recognizable style that draws from traditional Japanese tattoo and print imagery as well as Western elements.
+      The majority of his work is large in scale and compliments the body in a way that flows with the human anatomy, while inviting the viewer to look into the scene created within the piece.
     </p>
   </div>
 </div>
