--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
     <title>RyanUsherTattoo</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -24,7 +26,8 @@
             <span class="icon-bar"></span>
           </button>
           <%= link_to root_path do %>
-            <p class="lead navbar-text navbar-ryan">RYAN USSHER</p>
+            <%= image_tag 'usher_logo_hanya.png', class: 'hidden-xs navbar-brand navbar-brand-ryan'%>
+            <p class="lead navbar-text navbar-brand navbar-ryan" id="ryan_navbar-title">RYAN USSHER</p>
           <% end %>
         </div>
 
@@ -44,10 +47,10 @@
     </nav>
     <div class="container-fluid home-page">
       <% if !current_user %>
-        <nav class="social">
+        <nav class="social hidden-xs">
           <ul>
             <li><a href="http://www.instagram.com/ryanussher/" target="_blank">Instagram <i class="fa fa-instagram"></i></a></li>
-            <li><a href="http://facebook.com/" target="_blank">Facebook <i class="fa fa-facebook"></i></a></li>
+            <li><a href="http://www.facebook.com/usshertattoos" target="_blank">Facebook <i class="fa fa-facebook"></i></a></li>
           </ul>
         </nav>
       <% end %>
