--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,13 +7,13 @@
 <div class="row carousel">
   <div class="col-md-8 col-md-offset-2">
     <div class="slick-carousel">
-      <%= image_tag 'carousel_1.png', width: 400, class: 'carousel-image' %>
-      <%= image_tag 'carousel_2.png', width: 400, class: 'carousel-image' %>
-      <%= image_tag 'carousel_3.png', width: 400, class: 'carousel-image' %>
-      <%= image_tag 'carousel_4.png', width: 400, class: 'carousel-image' %>
-      <%= image_tag 'carousel_5.png', width: 400, class: 'carousel-image' %>
-      <%= image_tag 'carousel_6.png', width: 400, class: 'carousel-image' %>
-      <%= image_tag 'carousel_7.png', width: 400, class: 'carousel-image' %>
+      <%= image_tag 'carousel_1.png', width: 400, class: 'carousel-image', data: { lazy: 'carousel_1.png'} %>
+      <%= image_tag 'carousel_2.png', width: 400, class: 'carousel-image', data: { lazy: 'carousel_2.png'}  %>
+      <%= image_tag 'carousel_3.png', width: 400, class: 'carousel-image', data: { lazy: 'carousel_3.png'}  %>
+      <%= image_tag 'carousel_4.png', width: 400, class: 'carousel-image', data: { lazy: 'carousel_4.png'}  %>
+      <%= image_tag 'carousel_5.png', width: 400, class: 'carousel-image', data: { lazy: 'carousel_5.png'}  %>
+      <%= image_tag 'carousel_6.png', width: 400, class: 'carousel-image', data: { lazy: 'carousel_6.png'}  %>
+      <%= image_tag 'carousel_7.png', width: 400, class: 'carousel-image', data: { lazy: 'carousel_7.png'}  %>
     </div>
   </div>
 </div>
@@ -21,9 +21,9 @@
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
     <div class="small-bio">
-      <h1 class="lead text-center">JAPANESE CUSTOM TATTOO</h1>
+      <h1 class="lead text-center">CUSTOM TATTOING</h1>
       <hr>
-      <h4 class="lead text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
+      <h4 class="lead text-center">Lighthouse Tattoo artist Ryan Ussher has a bold style of tattooing that works brilliantly with Japanese imagery. His bold shading and exciting composition reflect wonderfully in the Hannyas and dragons Japanese tattooing has to offer and nothing shows that more than Ussher's large tattoos. Bodysuits and sleeves are just some of the epic tattoos Ussher creates and each piece is filled with his animated style.</h4>
     </div>
   </div>
 </div>
