--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row contact-section">
-  <div class="col-md-5">
+  <div class="col-md-5" data-aos="zoom-in" data-aos-duration="1500">
     <div class="big-mask">
       <%= image_tag 'mask2.png' %>
     </div>
@@ -12,7 +12,7 @@
     </p>
     <br><br>
 
-    <%= form_for @contact, html:  { class: 'form-horizontal contact-form' } do |f| %>
+    <%= form_for @contact, html:  { class: 'form-horizontal contact-form', data: { aos: "fade-down", aos_duration: "1500"} } do |f| %>
       <div class="form-group">
         <label for="name" class="col-sm-2 control-label">Name</label>
         <div class="col-sm-10">
