--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <div class="row about-section">
-  <div class="col-md-5">
+  <div class="col-md-5" data-aos="zoom-in" data-aos-duration="1500">
     <div class="big-mask">
       <%= image_tag 'mask1.png' %>
     </div>
@@ -7,14 +7,16 @@
   <div class="col-md-6">
     <h1 class="lead text-center">ABOUT</h1>
     <hr>
-    <div class="text-center">
+    <div class="text-center" data-aos="zoom-in" data-aos-duration="1500">
       <%= image_tag 'usher_face.png', width: 200 %>
     </div>
     <br><br>
-    <p class="lead">
-      Ryan's work is characterized by bold contrast and dynamic composition. The colours and tones are selected for their impact as well as for longevity in the skin over time. The movement conveyed by his dynamic drawing style encourages the viewer to want to view the whole piece from a distance as well as the details up close.
-      Having started his career in tattooing in 2005, Ryan has worked in many places in Australia and abroad, from bustling street shops to small private studios, to hone his skills into a recognizable style that draws from traditional Japanese tattoo and print imagery as well as Western elements.
-      The majority of his work is large in scale and compliments the body in a way that flows with the human anatomy, while inviting the viewer to look into the scene created within the piece.
-    </p>
+    <div data-aos="fade-down" data-aos-duration="1500">
+      <p class="lead">
+        Ryan's work is characterized by bold contrast and dynamic composition. The colours and tones are selected for their impact as well as for longevity in the skin over time. The movement conveyed by his dynamic drawing style encourages the viewer to want to view the whole piece from a distance as well as the details up close.
+        Having started his career in tattooing in 2005, Ryan has worked in many places in Australia and abroad, from bustling street shops to small private studios, to hone his skills into a recognizable style that draws from traditional Japanese tattoo and print imagery as well as Western elements.
+        The majority of his work is large in scale and compliments the body in a way that flows with the human anatomy, while inviting the viewer to look into the scene created within the piece.
+      </p>
+    </div>
   </div>
 </div>
