--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,7 +18,7 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row" data-aos="fade-down">
   <div class="col-md-10 col-md-offset-1">
     <div class="small-bio">
       <h1 class="lead text-center">CUSTOM TATTOING</h1>
@@ -29,7 +29,7 @@
 </div>
 
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-md-4" data-aos="zoom-in" data-aos-duration="1500">
     <div class="big-mask">
       <%= image_tag 'mask1.png' %>
     </div>
@@ -38,7 +38,7 @@
       <%= link_to "About", about_path, class: "btn btn-default" %>
     </div>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-4" data-aos="zoom-in" data-aos-duration="1500">
     <div class="big-mask">
       <%= image_tag 'mask3.png' %>
     </div>
@@ -47,7 +47,7 @@
       <%= link_to "Gallery", gallery_path, class: "btn btn-default" %>
     </div>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-4" data-aos="zoom-in" data-aos-duration="1500">
     <div class="big-mask">
       <%= image_tag 'mask2.png' %>
     </div>
