--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
     <title>RyanUsherTattoo</title>
+    <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
+    <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
@@ -56,6 +58,12 @@
       <% end %>
       <%= render partial: "shared/flash_messages", flash: flash %>
       <%= yield %>
+    </div>
+    <div class="visible-xs contact-mobile">
+      <div>
+        <span><a href="http://www.instagram.com/ryanussher/" target="_blank">Instagram <i class="fa fa-instagram"></i></a></span>
+        <span><a href="http://www.facebook.com/usshertattoos" target="_blank">Facebook <i class="fa fa-facebook"></i></a></span>
+      </div>
     </div>
     <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
   </body>
