--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col-md-8 col-md-offset-2 header">
-    <h1 class="lead text-center">RYAN USSHER</h1>
+    <%= image_tag 'usher_logo_hanya.png', class: 'visible-xs background-logo-hannya', width: '100%' %>
+    <h1 class="lead text-center ryan-top-hannya">RYAN USSHER</h1>
   </div>
 </div>
 
