--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,9 @@
 <div class="row">
   <div class="col-md-8 col-md-offset-2 header">
     <%= image_tag 'usher_logo_hanya.png', class: 'visible-xs background-logo-hannya', width: '100%' %>
-    <h1 class="lead text-center ryan-top-hannya">RYAN USSHER</h1>
+    <%= image_tag 'usher_logo_hanya.png', class: 'visible-lg background-logo-hannya logo-big-back' %>
+    <h1 class="text-center visible-xs ryan-top-hannya">RYAN USSHER</h1>
+    <h1 class="text-center visible-lg ryan-top-hannya-big">RYAN USSHER</h1>
   </div>
 </div>
 
@@ -22,9 +24,22 @@
 <div class="row" data-aos="fade-down">
   <div class="col-md-10 col-md-offset-1">
     <div class="small-bio">
+      <h1 class="lead text-center">ABOUT RYAN</h1>
+      <hr>
+      <h4 class="lead text-center">Drawing inspiration from traditional Japanese tattooing, the ukiyo-e period and the colourful western world, I see myself somewhere within these boundaries. My tattooing is applied with heavy contrast, movement and clarity that I aim to be noticed from across the street.</h4>
+    </div>
+  </div>
+</div>
+<br><br><br>
+
+<div class="row" data-aos="fade-down">
+  <div class="col-md-10 col-md-offset-1">
+    <div class="small-bio">
       <h1 class="lead text-center">CUSTOM TATTOING</h1>
       <hr>
-      <h4 class="lead text-center">Lighthouse Tattoo artist Ryan Ussher has a bold style of tattooing that works brilliantly with Japanese imagery. His bold shading and exciting composition reflect wonderfully in the Hannyas and dragons Japanese tattooing has to offer and nothing shows that more than Ussher's large tattoos. Bodysuits and sleeves are just some of the epic tattoos Ussher creates and each piece is filled with his animated style.</h4>
+      <a href="https://www.tattoodo.com/a/2016/06/animated-japanese-tattoos-by-ryan-ussher/" style="text-decoration:none;" target="_blank">
+        <h4 class="lead text-center">Lighthouse Tattoo artist Ryan Ussher has a bold style of tattooing that works brilliantly with Japanese imagery. His bold shading and exciting composition reflect wonderfully in the Hannyas and dragons Japanese tattooing has to offer and nothing shows that more than Ussher's large tattoos. Bodysuits and sleeves are just some of the epic tattoos Ussher creates and each piece is filled with his animated style.<br> -Tattoodoo</h4>
+      </a>
     </div>
   </div>
 </div>
