--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -298,6 +298,62 @@ a {
   margin-top: -100px;
 }
 
+.latest-image-inst {
+  margin-bottom: 2em;
+  text-align: center;
+  text-decoration: none;
+  img {
+    display: block;
+    margin: 0 auto;
+    padding: 3em;
+  }
+}
+
+.latest-image-inst-mobile {
+  margin-bottom: 2em;
+  text-align: center;
+  text-decoration: none;
+  img {
+    display: block;
+    margin: 0 auto;
+    padding: 0;
+  }
+}
+
+.caption {
+  background-color: gray;
+  opacity: 0.7;
+  color: white;
+  border-bottom-left-radius: 1em;
+  border-bottom-right-radius: 1em;
+}
+
+.caption-big {
+  background-color: gray;
+  opacity: 0.7;
+  color: white;
+  font-size: 1.5em;
+  border-radius: 1em;
+}
+
+.latest-header {
+  text-align: center;
+  font-size: 4em;
+  color: white;
+}
+
+.logo-big-back {
+  width: 30%;
+  margin-bottom: -13em;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+h1.ryan-top-hannya-big {
+  font-size: 7em;
+}
+
+
 // PORTRAIT MOBILE//////////
 @media only screen and (max-device-width: 430px) {
   .ryan-top-hannya {
@@ -305,13 +361,20 @@ a {
     z-index: 10;
     top: 35%;
     opacity: 0.7;
+    left: 1%;
+  }
+
+  .latest-image-inst {
+    img {
+      margin: 0 auto;
+    }
   }
 }
 
 // LANDSCAPE MOBILE /////
-@media only screen 
-and (max-device-width: 736px) 
-and (orientation: landscape) { 
+@media only screen
+and (max-device-width: 736px)
+and (orientation: landscape) {
   .background-logo-hannya {
     opacity: 0.3;
     margin-top: -200px;
@@ -320,17 +383,17 @@ and (orientation: landscape) {
     position: absolute;
     z-index: 10;
     top: 45%;
-    left: 24%;
+    left: 23%;
     opacity: 0.7;
   }
 }
 
 
 // LANDSCAPE MOBILE IPHONE 5/////
-@media only screen 
+@media only screen
 and (min-device-width: 320px)
-and (max-device-width: 568px) 
-and (orientation: landscape) { 
+and (max-device-width: 568px)
+and (orientation: landscape) {
   .background-logo-hannya {
     opacity: 0.3;
     margin-top: -190px;
