--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="row visible-lg">
+<div class="row visible-lg large-hannyas-home">
   <div class="col-md-4" data-aos="zoom-in" data-aos-duration="1500">
     <div class="big-mask">
       <%= image_tag 'mask1.png' %>
@@ -31,9 +31,11 @@
 <div class="row">
   <div class="col-md-8 header">
     <%= image_tag 'usher_logo_hanya.png', class: 'visible-xs background-logo-hannya', width: '100%' %>
-    <%= image_tag 'usher_logo_hanya.png', class: 'visible-lg background-logo-hannya logo-big-back' %>
-    <h1 class="text-center visible-xs ryan-top-hannya">RYAN USSHER</h1>
     <h1 class="text-center visible-lg ryan-top-hannya-big">RYAN USSHER</h1>
+    <div data-aos='zoom-in', data-aos-duration='1500'>
+      <%= image_tag 'usher_logo_hanya.png', class: 'visible-lg background-logo-hannya logo-big-back' %>
+    </div>
+    <h1 class="text-center visible-xs ryan-top-hannya">RYAN USSHER</h1>
   </div>
 </div>
 
@@ -56,10 +58,9 @@
     <div class="small-bio">
       <h1 class="lead text-center">CUSTOM TATTOING</h1>
       <hr>
-      <h4 class="lead text-center">Drawing inspiration from traditional Japanese tattooing, the ukiyo-e period and the colourful western world, I see myself somewhere within these boundaries. My tattooing is applied with heavy contrast, movement and clarity that I aim to be noticed from across the street.</h4>
-      <h4 class="lead text-center" style="font-style: italic" data-aos="fade-left" data-aos-duration="1500">Lighthouse Tattoo artist Ryan Ussher has a bold style of tattooing that works brilliantly with Japanese imagery.<br> -Tattoodoo</h4><br>
+      <h4 class="lead text-center">Drawing inspiration from traditional Japanese tattooing, the ukiyo-e period and the colourful western world, I see myself somewhere within these boundaries. My tattooing is applied with heavy contrast, movement and clarity that I aim to be noticed from across the street.</h4><br><br>
+      <h4 class="lead text-center" style="font-style: italic" data-aos="fade-left" data-aos-duration="1500">Lighthouse Tattoo artist Ryan Ussher has a bold style of tattooing that works brilliantly with Japanese imagery.</h4>
       <h4 class="lead text-center" style="font-style: italic" data-aos="fade-right" data-aos-duration="1500">His bold shading and exciting composition reflect wonderfully in the Hannyas and dragons Japanese tattooing has to offer and nothing shows that more than Ussher's large tattoos.<br> -Tattoodoo</h4><br>
-      <h4 class="lead text-center" style="font-style: italic" data-aos="fade-left" data-aos-duration="1500">Bodysuits and sleeves are just some of the epic tattoos Ussher creates and each piece is filled with his animated style.<br> -Tattoodoo</h4>
     </div>
   </div>
 </div>
