Change carousel images, fonts, and logo

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -49,6 +49,7 @@
       <%= image_tag 'carousel_5.png', width: 400, class: 'carousel-image', data: { lazy: 'carousel_5.png'}  %>
       <%= image_tag 'carousel_6.png', width: 400, class: 'carousel-image', data: { lazy: 'carousel_6.png'}  %>
       <%= image_tag 'carousel_7.png', width: 400, class: 'carousel-image', data: { lazy: 'carousel_7.png'}  %>
+      <%= image_tag 'carousel_8.png', width: 400, class: 'carousel-image', data: { lazy: 'carousel_8.png'}  %>
     </div>
   </div>
 </div>
