--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
+@font-face {
+  font-family: "Augustus";
+  src: url(/assets/augustus.ttf) format("truetype");
+}
 
 body {
   font-family: 'Raleway', sans-serif;
@@ -81,6 +85,7 @@ body {
 }
 
 .navbar-inverse .navbar-ryan {
+  font-family: "Augustus";
   font-size: 2.4em;
   color: white;
 }
@@ -279,6 +284,7 @@ a {
 .navbar-brand-ryan {
   height: 78px;
   width: 80px;
+  padding: 15px 6px;
 }
 
 .contact-mobile {
@@ -345,8 +351,8 @@ a {
 }
 
 .logo-big-back {
-  width: 30%;
-  margin-bottom: -5em;
+  width: 50%;
+  margin-bottom: 0;
   margin-left: auto;
   margin-right: auto;
   margin-top: -30px;
@@ -358,6 +364,7 @@ a {
 
 h1.ryan-top-hannya-big {
   font-size: 7em;
+  font-family: "Augustus";
 }
 
 
@@ -366,6 +373,7 @@ h1.ryan-top-hannya-big {
   .ryan-top-hannya {
     position: absolute;
     z-index: 10;
+    font-family: "Augustus";
     top: 35%;
     opacity: 0.7;
     left: 1%;
@@ -387,6 +395,7 @@ and (orientation: landscape) {
     margin-top: -200px;
   }
   .ryan-top-hannya {
+    font-family: "Augustus";
     position: absolute;
     z-index: 10;
     top: 45%;
@@ -406,6 +415,7 @@ and (orientation: landscape) {
     margin-top: -190px;
   }
   .ryan-top-hannya {
+    font-family: "Augustus";
     position: absolute;
     z-index: 10;
     top: 45%;
